--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -25,7 +25,7 @@
 
   </div><!-- /.container-fluid -->
 </nav>
-
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
 {% endblock %}
 
