--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">哈尔滨监狱内网管理工具</a>
+      <a class="navbar-brand" href="/">内网管理工具</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -25,8 +25,12 @@
 
   </div><!-- /.container-fluid -->
 </nav>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-
+    <script type="text/javascript" src="{{ url_for('bootstrap.static', filename='js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('bootstrap.static', filename='js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/socket.io-1.4.5.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-table.css') }}"/>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table-zh-CN.js') }}"></script>
 {% endblock %}
 
 
