--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -6,6 +6,6 @@
 {% block container %}
     <div class="jumbotron">
         <p>{{ str }}</p>
-        <h4><p style="float: right">by 哈尔滨监狱 信息技术科 韩峰</p></h4>
+        <h4><p style="float: right">by 韩峰 </p></h4>
     </div>
 {% endblock %}
