--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -26,12 +26,15 @@
   </div><!-- /.container-fluid -->
 </nav>
     <script type="text/javascript" src="{{ url_for('bootstrap.static', filename='js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('bootstrap.static', filename='js/plugins.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('bootstrap.static', filename='js/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/socket.io-1.4.5.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table.js') }}"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-table.css') }}"/>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table-zh-CN.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table-zh-CN.min.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-table.min.css') }}"/>
 {% endblock %}
+
+
 
 
 
