--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,14 +7,14 @@
 
 {% block container%}
 
-<a class="btn btn-primary btn-lg" href="/new" role="button">启动嗅探</a>
+<a class="new btn btn-primary btn-lg" href="/new" role="button">启动嗅探</a>
     <script type="text/javascript">
             $(document).ready(function(){
                 namespace = '/newone';
                 socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
                 socket.on('new_host_up', function(msg) {
                     console.log('new HOST: ' + msg.ip +' up' + '  mac:' + msg.mac)
-                    $('#hosts').bootstrapTable('prepend',msg);
+                    $('#hosts').bootstrapTable('append',msg);
                 });
             });
 
@@ -23,7 +23,7 @@
     </script>
     <script type="text/javascript">
         $(document).ready(function () {
-            $("#table").bootstrapTable('destroy');
+            //$("#table").bootstrapTable('destroy');
             $('#hosts').bootstrapTable({
                 method: "get",
                 url:"/refresh",
@@ -92,8 +92,9 @@
         });
         function operateFormatter(value, row, index) {
                 return [
-                    '<button type="button" class="Cut btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="断网中...">断网</button>',
-                    '<button type="button" class="Listen btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="监听中...">监听</button>',
+                    '<input checked data-toggle="toggle" type="checkbox">',
+                    '<button type="button" class="Cut btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="断网中..." data-toggle="toggle">断网</button>',
+                    '<button type="button" class="Listen btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="start" data-toggle="toggle">监听</button>',
                     '<button type="button" class="Edit btn btn-default  btn-sm active" style="margin-right:15px;">加入白名单</button>'
 
                 ].join('');
@@ -101,23 +102,30 @@
         window.operateEvents = {
                     'click .Cut': function (e, value, row, index) {
                         //alert(row.ip);
+                        var btn = $(this).button('loading');
                         $.post("{{ url_for('cut') }}",{ip:row.ip,mac:row.mac},function (result) {
-
-                        });
-                        $(this).button('断网中.....')
-                    }, 'click .Listen': function (e, value, row, index) {
-                            $(e).button('loading')
-                            $.post("{{ url_for('listen') }}",{ip:row.ip},function (result) {
                                 console.log(result)
-                                if(result == 'true'){
-                                    //alert("保存数据包成功！");
-                                    $(e).button('reset')
-                                }else {
-                                    //alert("保存数据包失败！");
-                                    $(e).button('reset')
+                                btn.button("reset")
+                        });
+                    }, 'click .Listen': function (e, value, row, index) {
 
+                            var btn = $(this).button('loading');
+                            $.post("{{ url_for('listen') }}",{ip:row.ip,mac:row.mac,start:btn.text()},function (result) {
+                                namespace = '/listen';
+                                socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
+                                socket.on('status', function(msg) {
+                                    console.log('start:' + msg.start);
+                                    if(msg.start == 'true'){
+                                        alert("保存数据包成功！");
+                                        btn.button("reset")
+                                    }else {
+                                        alert("保存数据包失败！");
+                                        btn.button("reset")
                                 }
+                                });
+
                             });
+
                     }, 'click .Edit': function (e, value, row, index) {
                         $.post("{{ url_for('policy') }}",{ip:row.ip,mac:row.mac},function(result){
                             if(result == 'true'){
@@ -134,7 +142,7 @@
             socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
             socket.on('list', function(msg) {
                     console.log('HOST up!' + msg[0].ip);
-                    $('#hosts').empty();
+                    //$('#hosts').empty();
                     $('#hosts').bootstrapTable('load',msg);
             });
 
@@ -155,7 +163,7 @@
 
 
 
-
+<input checked data-toggle="toggle" type="checkbox">
 
     <table id="hosts">
     <thead>
@@ -169,6 +177,6 @@
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-table-zh-CN.min.js') }}"></script>
-
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-toggle.min.js') }}"></script>
 
 {% endblock %}
