--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -25,8 +25,10 @@
 
   </div><!-- /.container-fluid -->
 </nav>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-table.min.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-toggle.min.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-table.min.css') }}"/>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-switch.min.css') }}"/>
     <script type="text/javascript" src="{{ url_for('static', filename='js/socket.io-1.4.5.js') }}"></script>
 
 {% endblock %}
