--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,8 +7,6 @@
 
 {% block container%}
 
-<a class="new btn btn-primary btn-lg" href="/new" role="button">启动嗅探</a>
-
     <script type="text/javascript">
             $(document).ready(function(){
                 namespace = '/newone';
@@ -18,7 +16,28 @@
                     $('#hosts').bootstrapTable('append',msg);
                 });
             });
+            $(document).ready(function(){
 
+                $('#startsniff').bootstrapToggle({
+                        on: '已启动主机探测',
+                        off: '启动主机探测'
+                });
+                $('#startsniff').bootstrapToggle('off')
+                $('#startsniff').change(function() {
+
+                    $('#console-event').html('Toggle: ' + $(this).prop('checked'))
+                    if($(this).prop('checked')){
+                        console.log('start the sniff!')
+                        $.get("{{ url_for('new') }}");
+                        $(this).bootstrapToggle('disable')
+
+                    }else {
+                        console.log('stop the sniff!')
+                        $(this).bootstrapToggle('enable')
+                    }
+                });
+
+            });
 
 
     </script>
@@ -93,9 +112,7 @@
         });
         function operateFormatter(value, row, index) {
                 return [
-                    '<input type="checkbox" name="my-checkbox" checked>',
-                    '<input checked data-toggle="toggle" type="checkbox">',
-                    '<button type="button" class="Cut btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="断网中..." data-toggle="toggle">断网</button>',
+                    '<button type="button" class="Cut btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="OUT" data-toggle="toggle">断网</button>',
                     '<button type="button" class="Listen btn btn-default  btn-sm active" style="margin-right:15px;" data-loading-text="start" data-toggle="toggle">监听</button>',
                     '<button type="button" class="Edit btn btn-default  btn-sm active" style="margin-right:15px;">加入白名单</button>'
 
@@ -103,15 +120,25 @@
                 }
         window.operateEvents = {
                     'click .Cut': function (e, value, row, index) {
-                        //alert(row.ip);
-                        var btn = $(this).button('断网10分钟！');
+                        var btn = $(this).button('loading');
                         $.post("{{ url_for('cut') }}",{ip:row.ip,mac:row.mac},function (result) {
-                                console.log(result)
-                                btn.button("reset")
+                                namespace = '/cut';
+                                socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
+                                socket.on('status', function(msg) {
+                                    console.log('start:' + msg.start);
+                                    if(msg.start == 'true'){
+                                        alert("断网恢复！");
+                                        btn.button("reset")
+                                    }else {
+                                        alert("断网失败！");
+                                        btn.button("reset")
+                                }
+                                });
                         });
                     }, 'click .Listen': function (e, value, row, index) {
 
                             var btn = $(this).button('loading');
+                            console.log('start:' + btn.text());
                             $.post("{{ url_for('listen') }}",{ip:row.ip,mac:row.mac,start:btn.text()},function (result) {
                                 namespace = '/listen';
                                 socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
@@ -144,7 +171,6 @@
             socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
             socket.on('list', function(msg) {
                     console.log('HOST up!' + msg[0].ip);
-                    //$('#hosts').empty();
                     $('#hosts').bootstrapTable('load',msg);
             });
 
@@ -163,10 +189,10 @@
 
 
 
-
-
-<input checked data-toggle="toggle" type="checkbox">
-<input type="checkbox" name="my-checkbox" checked>
+<div>
+    <!--<div><h3><span class="label label-primary">启动主机发现</span></h3></div>-->
+<div><input  data-toggle="toggle" type="checkbox" id = "startsniff"></div>
+</div>
     <table id="hosts">
     <thead>
       <tr>
